[tool.poetry]
name = "cusl_alerts_migration"
version = "0.1.0"
description = "Clean-up allergies exports at Cliniques Universitaires Saint-Luc to import the content into the new EMR"
authors = ["HEROUFOSSE Martin <martin.heroufosse@uclouvain.be>"]
license = "MIT"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.1.2"
xlrd = "^1.2.0"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.4"
mypy = "^0.782"
pre-commit = "^2.7.1"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
